Fix: Remove dark mode styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ a {
   height: 280px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -36,4 +36,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
